feat(build): add guarded OpenRewrite maintenance lane
Add the pinned, curated OpenRewrite profile, accepted modernization baseline, ordered OpenRewrite-to-Spotless CI state check, Renovate policy, and exhaustive per-recipe decision record.

Refs: https://github.com/martin-francois/symphony-trello/issues/587